let shine let it shine without its build system getting in the way

--- a/overlays/speexdsp/CMakeLists.txt
+++ b/overlays/speexdsp/CMakeLists.txt
@@ -1,3 +1,30 @@
 cmake_minimum_required(VERSION 3.20)
 project(libspeexdsp)
-include(${CI}/automake.cmake)
+
+include_directories(include)
+
+add_library(
+    speexdsp STATIC
+    libspeexdsp/buffer.c
+	libspeexdsp/fftwrap.c
+	libspeexdsp/filterbank.c
+	libspeexdsp/jitter.c
+	libspeexdsp/kiss_fft.c
+	libspeexdsp/kiss_fftr.c
+	libspeexdsp/mdf.c
+	libspeexdsp/preprocess.c
+    libspeexdsp/resample.c
+    libspeexdsp/scal.c
+    libspeexdsp/smallft.c)
+
+target_compile_definitions(speexdsp PRIVATE FIXED_POINT=1)
+                         
+install(
+    TARGETS speexdsp
+    LIBRARY DESTINATION lib  # for shared libs
+    ARCHIVE DESTINATION lib) # for static libs
+
+install(
+    DIRECTORY       include
+    DESTINATION     include
+    FILES_MATCHING  PATTERN "*.h")
