--- a/overlays/shine/CMakeLists.txt
+++ b/overlays/shine/CMakeLists.txt
@@ -1,3 +1,25 @@
 cmake_minimum_required(VERSION 3.20)
 project(libshine)
-include(${CI}/automake.cmake)
+
+include_directories(src src/lib src/bin)
+
+add_library(
+    shine STATIC
+    src/lib/bitstream.c src/lib/huffman.c
+    src/lib/l3bitstream.c
+    src/lib/l3loop.c 
+    src/lib/l3mdct.c 
+    src/lib/l3subband.c
+    src/lib/layer3.c
+    src/lib/reservoir.c
+    src/lib/tables.c)
+                         
+install(
+    TARGETS shine
+    LIBRARY DESTINATION lib  # for shared libs
+    ARCHIVE DESTINATION lib) # for static libs
+
+install(
+    DIRECTORY       libshine/include/
+    DESTINATION     include
+    FILES_MATCHING  PATTERN "*.h")
