--- a/project.json
+++ b/project.json
@@ -40,7 +40,7 @@
             "commit":   "1873d3b",
             "url":      "https://github.com/Mbed-TLS/mbedtls",
             "cmake": {
-                "args": ["-DMBEDTLS_SSL_DTLS_SRTP=1","-DUSE_SHARED_MBEDTLS_LIBRARY=1"]
+                "args": ["-DMBEDTLS_SSL_DTLS_SRTP=1","-DMSVC_STATIC_RUNTIME=1"]
             }
         },
         {
@@ -65,13 +65,19 @@
             "name":     "usrsctp",
             "version":  "0.9.5.0",
             "url":      "https://github.com/sctplab/usrsctp",
-            "commit":   "07f871b"
+            "commit":   "07f871b",
+            "cmake": {
+                "args-win": ["-DCMAKE_C_FLAGS=/MT"]
+            }
         },
         {
             "name":     "ogg",
             "version":  "1.3.5",
             "url":      "https://github.com/xiph/ogg",
-            "commit":   "e1774cd"
+            "commit":   "e1774cd",
+            "cmake": {
+                "args-win": ["-DCMAKE_C_FLAGS=/MT"]
+            }
         },
         {
             "name":     "opusfile",
