--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -25,6 +25,31 @@
             "osx": {
                 "command": "make ux-app -j4"
             }
+        },
+        {
+            "label": "build-streamer",
+            "type": "shell",
+			"options": {
+                "cwd": "${workspaceFolder}/../ion/build"
+            },
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "presentation": {
+                "reveal": "always",
+                "panel": "shared",
+                "group": "build0",
+                "clear": true
+            },
+			"isBackground": false,
+			"problemMatcher": ["$gcc"],
+            "windows": {
+                "command": "msbuild ion.sln /t:streamer"
+            },
+            "osx": {
+                "command": "make streamer -j4"
+            }
         }
    
 	]
