--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -27,6 +27,31 @@
             }
         },
         {
+            "label": "build-signal",
+            "type": "shell",
+			"options": {
+                "cwd": "${workspaceFolder}/../ion/build"
+            },
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "presentation": {
+                "reveal": "always",
+                "panel": "shared",
+                "group": "build0",
+                "clear": true
+            },
+			"isBackground": false,
+			"problemMatcher": ["$gcc"],
+            "windows": {
+                "command": "msbuild ion.sln /t:signal"
+            },
+            "osx": {
+                "command": "make signal -j4"
+            }
+        },
+        {
             "label": "build-streamer",
             "type": "shell",
 			"options": {
