--- a/overlays/opusenc/CMakeLists.txt
+++ b/overlays/opusenc/CMakeLists.txt
@@ -26,3 +26,9 @@ file(GLOB_RECURSE INC_FILES "${CMAKE_SOURCE_DIR}/include/*.h")
 
 install(FILES   ${INC_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/opusenc)
 install(TARGETS opusenc      DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+
+if (MSVC)
+    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+endif()
+
+add_compile_options(/MT)
