--- a/overlays/shine/CMakeLists.txt
+++ b/overlays/shine/CMakeLists.txt
@@ -27,3 +27,5 @@ install(
 if (MSVC)
     set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 endif()
+
+add_compile_options(/MT)
