fix up ninja.bat to instal llibs on windows.  there is no cmake install on windows for msvc projects

--- a/project.json
+++ b/project.json
@@ -50,11 +50,17 @@
             "commit":   "3b3c175",
             "url":      "https://github.com/wolfSSL/wolfssl",
             "cmake": {
-                "args": ["-DNO_WOLFSSL_SERVER=0","-DWOLFSSL_DTLS=1","-DWOLFSSL_TLS13=1","-DWOLFSSL_DTLS_CID=1",
+                "args": ["-DWOLFSSL_DTLS=1",
+                         "-DWOLFSSL_TLS13=1",
+                         "-DWOLFSSL_DTLS13=1",
+                         "-DWOLFSSL_DTLS_CID=1",
                          "-DWOLFSSL_OPENSSLALL=1", "-DBUILD_SHARED_LIBS=0",
-                         "-DWOLFSSL_CRYPT_TESTS_LIBS=1","-DWOLFSSL_CRYPT_TESTS=1",
+                         "-DWOLFSSL_CRYPT_TESTS=0",
+                         "-DWOLFSSL_CRYPT_TESTS_LIBS=0",
+                         "-DWOLFSSL_CRYPT_TESTS=0",
                          "-DWOLFSSL_DEBUG=1"]
-            }
+            },
+            "platforms":["none"]
         },
         {
             "name":     "juice",
