fix up JUICE_EXPORTS and get building on windows

--- a/overlays/juice/CMakeLists.txt
+++ b/overlays/juice/CMakeLists.txt
@@ -188,8 +188,8 @@ if(NOT NO_EXPORT_HEADER AND CMAKE_VERSION VERSION_GREATER_EQUAL "3.12")
 	set_target_properties(juice PROPERTIES C_VISIBILITY_PRESET hidden)
 	install(FILES ${PROJECT_BINARY_DIR}/juice_export.h DESTINATION include/juice)
 else()
-	target_compile_definitions(juice PRIVATE JUICE_EXPORTS)
-	target_compile_definitions(juice-static PRIVATE JUICE_EXPORTS)
+	target_compile_definitions(juice PUBLIC JUICE_EXPORTS)
+	target_compile_definitions(juice-static PUBLIC JUICE_EXPORTS)
 endif()
 
 if(NOT MSVC)
