fix up definitions

--- a/overlays/usrsctp/CMakeLists.txt
+++ b/overlays/usrsctp/CMakeLists.txt
@@ -43,7 +43,9 @@ include(CheckIncludeFile)
 include(CheckIncludeFiles)
 include(CheckCCompilerFlag)
 
-add_compile_definitions(-D_CRT_SECURE_NO_WARNINGS)
+if(MSVC)
+	add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+endif()
 
 #################################################
 # CHECK OPTIONS
