--- a/overlays/usrsctp/CMakeLists.txt
+++ b/overlays/usrsctp/CMakeLists.txt
@@ -44,7 +44,7 @@ include(CheckIncludeFiles)
 include(CheckCCompilerFlag)
 
 if(MSVC)
-	add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+	#add_definitions(-D_CRT_SECURE_NO_WARNINGS)
 endif()
 
 #################################################
